# ChampSim-Ramulator

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  integration_architecture.md  test.json  vcpkg.json
configs/: HBM-config.cfg
configs/r2/: DDR3.yaml  DDR4.yaml  DDR5.yaml  GDDR6.yaml  HBM.yaml  HBM2.yaml  HBM3.yaml  LPDDR5.yaml
inc/: ProjectConfiguration.h  cameo.h  ideal_single_mempod.h  main.h  os_transparent_management.h  variable_granularity.h
inc/ChampSim/: block.h  cache.h  cache_modules.inc  champsim.h  champsim_constants.h  circular_buffer.hpp  delay_queue.hpp  dram_controller.h  instruction.h  memory_class.h  ooo_cpu.h  ooo_cpu_modules.inc  operable.h  ptw.h  trace_instruction.h  util.h  vmem.h
inc/Ramulator/: Cache.h  Config.h  Controller.h  DDR3.h  DRAM.h  Gem5Wrapper.h  HBM.h  Memory.h  PCM.h  Processor.h  Ramulator.h  Request.h  SpeedyController.h  StatType.h  Statistics.h
include/: ProjectConfiguration.h  cameo.h  ideal_single_mempod.h  main.h  os_transparent_management.h  variable_granularity.h
include/ChampSim/: access_type.h  address.h  block.h  cache.h  cache_builder.h  cache_module_decl.inc  cache_module_def.inc  cache_stats.h  champsim.h  champsim_constants.h  channel.h  core_builder.h  core_inst.cc.inc  core_inst.h  core_inst.inc  core_stats.h  deadlock.h  defaults.hpp  dram_controller.h  dram_stats.h  environment.h  event_listeners.h  events.h  extent.h  extent_set.h  inf_stream.h  instruction.h  legacy_bridge.h  module_impl.h  modules.h  ooo_cpu.h  ooo_cpu_module_decl.inc  ooo_cpu_module_def.inc  operable.h  phase_info.h  ptw.h  ptw_builder.h  ramulator2_dram_controller.h  ramulator_dram_controller.h  register_allocator.h  (+7 more)
include/Ramulator/: ALDRAM.h  Cache.h  Config.h  Controller.h  DDR3.h  DDR4.h  DRAM.h  (+22 more)
scripts/: download_dpc3_traces.sh  dpc3_max_simpoint2.txt
source/: CMakeLists.txt  ProjectConfiguration.cc  cameo.cc  ideal_single_mempod.cc  main.cc  os_transparent_management.cc  variable_granularity.cc
source/ChampSim/: CMakeLists.txt  address.cc  bandwidth.cc  cache.cc  cache_stats.cc  champsim.cc  channel.cc  chrono.cc  core_inst.cc  core_stats.cc  dram_controller.cc  dram_stats.cc  extent.cc  generated_environment.cc  json_printer.cc  modules.cc  ooo_cpu.cc  operable.cc  plain_printer.cc  ptw.cc  ptw_builder.cc  ramulator2_dram_controller.cc  register_allocator.cc  tracereader.cc  vmem.cc
source/ChampSim/branch/: CMakeLists.txt
source/ChampSim/branch/bimodal/: bimodal.cc
source/ChampSim/branch/gshare/: gshare.cc
source/ChampSim/branch/hashed_perceptron/: hashed_perceptron.cc
source/ChampSim/branch/perceptron/: perceptron.cc
source/ChampSim/btb/: CMakeLists.txt
source/ChampSim/btb/basic_btb/: basic_btb.cc  direct_predictor.cc  indirect_predictor.cc  return_stack.cc
source/ChampSim/prefetcher/: CMakeLists.txt
source/ChampSim/prefetcher/ip_stride/: ip_stride.cc
source/ChampSim/prefetcher/next_line/: next_line.cc
source/ChampSim/prefetcher/next_line_instr/: next_line.cc
source/ChampSim/prefetcher/no/: no.cc
source/ChampSim/prefetcher/no_instr/: no.cc
source/ChampSim/prefetcher/spp_dev/: spp_dev.cc
source/ChampSim/prefetcher/va_ampm_lite/: va_ampm_lite.cc
source/ChampSim/replacement/: CMakeLists.txt
source/ChampSim/replacement/drrip/: drrip.cc
source/ChampSim/replacement/lru/: lru.cc
source/ChampSim/replacement/random/: random.cc
source/ChampSim/replacement/ship/: ship.cc
source/ChampSim/replacement/srrip/: srrip.cc
source/Ramulator2/: CMakeLists.txt  main.cpp
source/Ramulator2/addr_mapper/: CMakeLists.txt
source/Ramulator2/addr_mapper/impl/: linear_mappers.cpp  rit.cpp
source/Ramulator2/base/: CMakeLists.txt  config.cpp  factory.cpp  logging.cpp  request.cpp  stats.cpp  utils.cpp
source/Ramulator2/dram/: CMakeLists.txt
source/Ramulator2/dram/impl/: DDR3.cpp  DDR4-RVRR.cpp  DDR4-VRR.cpp  DDR4.cpp  DDR5-RVRR.cpp  DDR5-VRR.cpp  DDR5.cpp  GDDR6.cpp  HBM.cpp  HBM2.cpp  HBM3.cpp  LPDDR5.cpp
source/Ramulator2/dram_controller/: CMakeLists.txt
source/Ramulator2/dram_controller/impl/: bh_dram_controller.cpp  dummy_controller.cpp  generic_dram_controller.cpp  prac_dram_controller.cpp
source/Ramulator2/dram_controller/impl/plugin/: aqua.cpp  cmd_counter.cpp  graphene.cpp  hydra.cpp  oracle_rh.cpp  para.cpp  rfm_manager.cpp  rrs.cpp  trace_recorder.cpp  trr.cpp  twice.cpp
source/Ramulator2/dram_controller/impl/plugin/bliss/: bliss.cpp
source/Ramulator2/dram_controller/impl/plugin/blockhammer/: blockhammer.cpp
source/Ramulator2/dram_controller/impl/plugin/device_config/: device_config.cpp
source/Ramulator2/dram_controller/impl/plugin/prac/: prac.cpp
source/Ramulator2/dram_controller/impl/refresh/: all_bank_refresh.cpp
source/Ramulator2/dram_controller/impl/rowpolicy/: basic_rowpolicies.cpp
source/Ramulator2/dram_controller/impl/scheduler/: bh_scheduler.cpp  bliss_scheduler.cpp  blocking_scheduler.cpp  generic_scheduler.cpp  prac_scheduler.cpp
source/Ramulator2/example/: CMakeLists.txt
source/Ramulator2/example/impl/: another_impl.cpp  complicated_impl.cpp  example_impl.cpp  example_serialization.cpp  yetanother_impl.cpp
source/Ramulator2/frontend/: CMakeLists.txt
source/Ramulator2/frontend/impl/external_wrapper/: champSim_frontend.cpp  gem5_frontend.cpp
source/Ramulator2/frontend/impl/memory_trace/: loadstore_trace.cpp  readwrite_trace.cpp
source/Ramulator2/frontend/impl/processor/bhO3/: bhO3.cpp  bhcore.cpp  bhllc.cpp
source/Ramulator2/frontend/impl/processor/simpleO3/: core.cpp  llc.cpp  simpleO3.cpp  trace.cpp
source/Ramulator2/memory_system/: CMakeLists.txt
source/Ramulator2/memory_system/impl/: bh_DRAM_system.cpp  dummy_memory_system.cpp  generic_DRAM_system.cpp
source/Ramulator2/test/: CMakeLists.txt  test_impl.cpp
source/Ramulator2/translation/: CMakeLists.txt
source/Ramulator2/translation/impl/: no_translation.cpp  random_translation.cpp
src/: ProjectConfiguration.cc  cameo.cc  ideal_single_mempod.cc  main.cc  multiple_granularity.cc  os_transparent_management.cc  variable_granularity.cc
(+144 files in other folders)
